syntax = "proto3";

package user;

import "google/type/date.proto";

option go_package = "github.com/romsar/hlsoc/grpc/gen;grpcgen";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message LoginRequest {
  string id = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RegisterRequest {
  string password = 1;
  string first_name = 2;
  string second_name = 3;
  google.type.Date birth_date = 4;
  Gender gender = 5;
  string biography = 6;
  string city = 7;
}

message RegisterResponse {
  string user_id = 1;
}

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string second_name = 3;
  google.type.Date birth_date = 4;
  Gender gender = 5;
  string biography = 6;
  string city = 7;
}